--- a/ReproducerApp/package.json
+++ b/ReproducerApp/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-safe-area-context": "^4.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
